--- a/CookieClicker/CookieClicker/CookieClicker.vcxproj.filters
+++ b/CookieClicker/CookieClicker/CookieClicker.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="img\hello_world.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
