--- a/CookieClicker/CookieClicker/CookieClicker.vcxproj.filters
+++ b/CookieClicker/CookieClicker/CookieClicker.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Render.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Render.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,6 +56,12 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="img\down.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="img\texture.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="img\loaded.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
