Moves Image Loading Logic to separate class with interface

--- a/CookieClicker/CookieClicker/CookieClicker.vcxproj
+++ b/CookieClicker/CookieClicker/CookieClicker.vcxproj
@@ -164,11 +164,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="01_hello_SDL.cpp" />
+    <ClCompile Include="IImageLoader.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="SDLImageLoader.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IImageLoader.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="SDLImageLoader.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
