--- a/CookieClicker/CookieClicker/CookieClicker.vcxproj
+++ b/CookieClicker/CookieClicker/CookieClicker.vcxproj
@@ -71,20 +71,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x64\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(SolutionDir)ext\SDL2_image-2.6.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x64\;$(SolutionDir)ext\SDL2_image-2.6.3\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x86\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(SolutionDir)ext\SDL2_image-2.6.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x86\;$(SolutionDir)ext\SDL2_image-2.6.3\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x86\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(SolutionDir)ext\SDL2_image-2.6.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x86\;$(SolutionDir)ext\SDL2_image-2.6.3\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x64\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)ext\SDL2-2.26.4\include;$(SolutionDir)ext\SDL2_image-2.6.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)ext\SDL2-2.26.4\lib\x64\;$(SolutionDir)ext\SDL2_image-2.6.3\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -97,10 +97,11 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x86\SDL2.dll" "$(TargetDir)SDL2.dll"</Command>
+      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x86\SDL2.dll" "$(TargetDir)SDL2.dll"
+copy /Y "$(SolutionDir)ext\SDL2_image-2.6.3\lib\x86\SDL2_image.dll" "$(TargetDir)SDL2_image.dll"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -118,10 +119,11 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x86\SDL2.dll" "$(TargetDir)SDL2.dll"</Command>
+      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x86\SDL2.dll" "$(TargetDir)SDL2.dll"
+copy /Y "$(SolutionDir)ext\SDL2_image-2.6.3\lib\x86\SDL2_image.dll" "$(TargetDir)SDL2_image.dll"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -135,10 +137,11 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2.dll"</Command>
+      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2.dll"
+copy /Y "$(SolutionDir)ext\SDL2_image-2.6.3\lib\x64\SDL2_image.dll" "$(TargetDir)SDL2_image.dll"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -156,10 +159,11 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2.dll"</Command>
+      <Command>copy /Y "$(SolutionDir)ext\SDL2-2.26.4\lib\x64\SDL2.dll" "$(TargetDir)SDL2.dll"
+copy /Y "$(SolutionDir)ext\SDL2_image-2.6.3\lib\x64\SDL2_image.dll" "$(TargetDir)SDL2_image.dll"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -167,12 +171,14 @@
     <ClCompile Include="IImageLoader.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="SDLImageLoader.cpp" />
+    <ClCompile Include="SDL_ImageImageLoader.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IImageLoader.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="SDLImageLoader.h" />
+    <ClInclude Include="SDL_ImageImageLoader.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
